# noctics

./: .gitignore  .gitmodules  ARCHITECTURE.md  README.md  THIRD_PARTY_LICENSES.md  agents.plan  examples.md  main.py  nox_env.py  pyproject.toml
.github/workflows/: ci.yml  release-wheels.yml  release.yml
assets/runtime/: centi-nox.modelfile  nano-nox.modelfile  primary_alias.txt
core_pinaries/: README.md  __init__.py  pyproject.toml
core_pinaries/build_pkg/core_pinaries/: noctics_core.pth
core_pyd/: README.md  __init__.py  central.py  config.py  inference.py  noctics_core.pth  pyproject.toml
data/: orch_eval.json  orch_eval_gpt4o.json
docs/: configuration.md  install_walkthrough.md  installer_design.md
docs/dev/: index.md
docs/users/: index.md
experiments/: README.md
experiments/engine/: Cargo.toml  README.md
experiments/gpu_ui_demo/: README.md  bridge_server.py
experiments/neuroutine/: neuroutine_collect.py  neuroutine_controller.py  neuroutine_eval.py  neuroutine_gate.py  neuroutine_loop.py  neuroutine_one.py  neuroutine_train.py  run_neuroutine_loop.sh
installer/: __init__.py  bootstrap.py  manifest.example.json
instruments/: __init__.py  base.py  openai.py
memory/: system_prompt.dev.md  system_prompt.dev.txt  system_prompt.md  system_prompt.txt
noctics_cli/: __init__.py  __main__.py  app.py  args.py  dev.py  hud.py  metrics.py  multitool.py  paths.py  tui.py
noxpy/: .gitignore  LEGACY.md  README.md  THIRD_PARTY_LICENSES.md  agents.plan  pyproject.toml  test_wheels.sh
release/: README.md  env_public.env  noctics_centi.spec  noctics_edge.spec  noctics_ejer.spec  noctics_micro.spec  noctics_nano.spec  noctics_release.spec  runtime_env.py
scripts/: bench_cot.sh  bench_real.py  bench_real_life.sh  benchmark_targets.py  build_centi.sh  build_edge.sh  build_ejer.sh  build_j_rei.sh  build_localrunner.sh  build_micro.sh  build_nano.sh  build_release.sh  check_instrument_routing.py  orchestrate_eval.py  package_installer_artifacts.py  prepare_assets.sh  push_core_pyd.sh  run_orchestration_audit.py  smoke_orchestration.py  update_core.sh
tests/: test_installer_packaging.py  test_orchestration_flow.py  test_runtime_candidates.py
(+86 files in other folders)
