[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "noctics-core-pinaries"
version = "0.1.39"
description = "Binary distribution of the Noctics core modules."
requires-python = ">=3.11"
authors = [{name = "Rei"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
]
readme = "README.md"

[tool.setuptools]
packages = ["core_pinaries", "core_pinaries.noxl"]
include-package-data = true

[tool.setuptools.package-data]
"core_pinaries" = ["*.so"]

[tool.setuptools.data-files]
"" = ["core_pinaries/noctics_core.pth"]
